--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.2.4",
     "gh-pages": "^4.0.0",
     "overlayscrollbars": "^2.0.3",
+    "overlayscrollbars-react": "^0.5.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
